--- a/MeanDemo/views/index.ejs
+++ b/MeanDemo/views/index.ejs
@@ -1,8 +1,40 @@
-<doctype html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>article</title>
+    <link rel="stylesheet" href="../public/lib/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/stylesheets/style.css"> 
+    <script src="../public/lib/jquery/dist/jquery.min.js"></script>
+    <script src="../public/lib/angular/angular.min.js"></script>
+    <script src="../public/lib/angular-ui/router/release/angular-ui-router.js"></script>
+    <scirpt src="../public/articles/article.js"></scirpt>
 </head>
-<body>
-this is test;
+
+<body ng-app="articleapp" ng-controller='ArticleCtrl'>
+  
+  <form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputFile">File input</label>
+    <input type="file" id="exampleInputFile">
+    <p class="help-block">Example block-level help text here.</p>
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> Check me out
+    </label>
+  </div>
+  
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
 </body>
 </html>
